// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Size 1`] = `
Array [
  <div
    className=""
  >
    <table>
      <tbody>
        <tr>
          <td>
            <p>
              Small
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx by"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <p>
              Medium
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx cg"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ch ce bo c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <p>
              Large
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx ci"
              data-baseweb="card"
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/pWt1iRuhNpeVDNP2QiUT2C5OiBt.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax bn az bo c5 at au av c6 c7 c8 c9 ca"
                >
                  Downtown Abbey
                </h1>
                <div
                  className="cb cc ax cd ce cf"
                >
                  <div
                    className="cb cc ax cd ce cf"
                    style={
                      Object {
                        "color": "#AFAFAF",
                      }
                    }
                  >
                    September 20
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ax cd ce cf b9 cj ck"
      data-baseweb="input"
    >
      <div
        className="cl cj ck cm bu cn an ao b3 b4 b1 b2 ax cd ce cf b9 co bj"
        data-baseweb="base-input"
      >
        <div
          className="cj af b7"
        >
          <svg
            className="cp cq cr cs ct"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cl ba ah ai ak ck c0 cu cv b5 b6 cw cx ax cd ce cf b9 cy cz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ay ce b0 b9 cj ck"
      data-baseweb="input"
    >
      <div
        className="cl cj ck cm bu cn an ao b3 b4 b1 b2 ax ay ce b0 b9 co bj"
        data-baseweb="base-input"
      >
        <div
          className="cj af b7"
        >
          <svg
            className="cp cq cr cs ct"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cl ba ah ai ak ck c0 cu cv d0 d1 d2 d3 ax ay ce b0 b9 cy cz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ch ce bo b9 cj ck"
      data-baseweb="input"
    >
      <div
        className="cl cj ck cm bu cn an ao b3 b4 b1 b2 ax ch ce bo b9 co bj"
        data-baseweb="base-input"
      >
        <div
          className="cj af b7"
        >
          <svg
            className="cp cq cr cs ct"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cl ba ah ai ak ck c0 cu cv bp bq d4 d5 ax ch ce bo b9 cy cz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
